Wed Oct 20 15:41:24 MST 2004  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/examples/ImR/Combined_Service/ImR_Combined_Service.mpc:

          Changed the projects so the ones using test.idl will not be compiled
          in parallel.

Wed Oct 20 14:25:59 2004  Iliyan Jeliazkov  <jeliazkov_i@ociweb.com>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.cpp:

          Windows paths often have embedded colons (':'), which causes
          problems in the case of parsing the parameters for the -SSL* 
          options on that platform.

Wed Oct 20 13:55:13 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/AVStreams/Simple_Three_Stage/sender.cpp:

          Wait for the distributer to start up before beginning to send the
          test file contents.  This test still has a shutdown problem, but
          I'm not sure if it's in the distributer or the AV core.

Wed Oct 20 19:03:01 2004  Olli Savia  <ops@iki.fi>

        * examples/POA/DSI/Database_i.cpp:
        * examples/RTCORBA/Activity/Activity.cpp:
        * examples/RTCORBA/Activity/Task_Stats.cpp:
        * examples/RTScheduling/Fixed_Priority_Scheduler/test.cpp:
        * examples/RTScheduling/MIF_Scheduler/test.cpp:
        * examples/RTScheduling/Task_Stats.cpp:
        * orbsvcs/tests/AVStreams/Modify_QoS/sender.cpp:
        * orbsvcs/tests/AVStreams/Multicast/ftp.cpp:
        * orbsvcs/tests/AVStreams/Multicast/server.cpp:
        * orbsvcs/tests/AVStreams/Multicast_Full_Profile/ftp.cpp:
        * orbsvcs/tests/AVStreams/Multicast_Full_Profile/server.cpp:
        * orbsvcs/tests/AVStreams/Multiple_Flows/receiver.cpp:
        * orbsvcs/tests/AVStreams/Multiple_Flows/sender.cpp:
        * orbsvcs/tests/AVStreams/Pluggable/ftp.cpp:
        * orbsvcs/tests/AVStreams/Pluggable_Flow_Protocol/sender.cpp:
        * orbsvcs/tests/AVStreams/Simple_Three_Stage/distributer.cpp:
        * orbsvcs/tests/AVStreams/Simple_Three_Stage/sender.cpp: